[package]
name = "resizinator"
version = "0.1.0"
authors = ["Traverse Research <opensource@traverseresearch.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
winapi = { version="0.3.9", features=["winuser"] }
thiserror = "1.0.28"
